test/sema/positive/borrowsema/borrow_subscope.impala
fn f() -> () {
    let mut a = 4;

    {
        let b = &a;
        let c = *b;
    }

    a = 5;
}
