test/sema/negative/borrowsema/borrow_struct_partial_2.impala
struct S {
    x1: int,
    x2: &int
}

fn f() -> () {
    let a = 4;
    let mut b = S { x1: 6, x2: &a };
    let c = &*b.x2;
    let d = 5;
    b = S { x1: 7, x2: &d };
}
